lab1/Test/L1-A-8-35.output
Error Type B at Line 4
Error Type B at Line 14
Error Type B at Line 23
Error Type B at Line 35
Error Type B at Line 39
